language/tools/move-cli/tests/build_tests/include_exclude_stdlib/args.exp
Command `package build -v`:
BUILDING build_include_exclude_stdlib
error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:2:7
  │
2 │   use Std::Signer;
  │       ^^^^^^^^^^^ Invalid 'use'. Unbound module: '(Std=0x1)::Signer'

error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:5:5
  │
5 │     Signer::address_of(account)
  │     ^^^^^^ Unbound module alias 'Signer'

Command `-d -v package build`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING build_include_exclude_stdlib
